--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     
     <title>DOM learning</title>
+    <style>
+        body{
+            background-color: #212121;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <div class="bg-black">
-        <h1 class="heading">DOM learning with self motivation</h1>
-        <p>Lorem ipsum dolor sit amet consectetur.</p>
+        <h1 id="title" class="heading">DOM learning with self motivation<span style="display: none;">I am span</span></h1>
+        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+        <h2>Lorem ipsum dol.</h2>
+        <h2>Lorem ipsum dosectetur.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur .</p>
     </div>
 
 </body>
